--- a/Netflix.css
+++ b/Netflix.css
@@ -1,6 +1,6 @@
 /** background **/
 
-body {
+.background-section {
     background: #000;
     background-image: url('images/Netflix-background.png');
     background-size: cover;
@@ -8,17 +8,25 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
-body::before {
+.background-section::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.75);
     z-index: 1;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
 }
 
 /** navbar **/
@@ -69,6 +77,7 @@ body::before {
     height: 32px;
     width: 120px;
     font-size: 16px;
+    border: 1px solid #5e5e5e;
 }
 
 .button button {
@@ -88,6 +97,7 @@ body::before {
 /** Center text **/
 
 .center-text {
+    margin-top: 70px;
     padding: 0 32px 32px;
     z-index: 2;
     position: absolute;
@@ -136,7 +146,7 @@ body::before {
     box-sizing: border-box;
     margin-right: 13px;
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 2px solid #5e5e5e;
     border-radius: 5px;
     font-size: 14px;
     color: #fff;
@@ -149,7 +159,7 @@ body::before {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-    color: #fff;
+    color: #b0b0b0;
     font-size: 1rem;
     pointer-events: none;
     transition: 0.3s ease;
@@ -166,7 +176,7 @@ body::before {
     left: 12px;
     z-index: 1;
     padding: 0 5px;
-    color: #ccc;
+    color: #b0b0b0;
 }
 
 .button2 button {
@@ -181,8 +191,39 @@ body::before {
     color: #fff;
 }
 
+button i {
+    color: #fff;
+    margin-left: 10px;
+    font-size: 20px;
+}
+
 .button2 button:hover {
     background: #c11119;
+}
+
+/** content **/
+
+.content {
+    padding: 0 148px;
+    background: #000;
+    color: #fff;
+}
+
+.heading3 h2 {
+    font-size: 24px;
+    color: #fff;
+}
+
+.options {
+    display: flex;
+    gap: 20px;
+}
+
+.options select {
+    padding: 8px 36px 8px 12px;
+    background: transparent;
+    color: #fff;
+    border-radius: 5px;
 }
 
 /** responsive **/
