--- a/Netflix.css
+++ b/Netflix.css
@@ -72,11 +72,11 @@ body {
     padding: 6px 20px 6px 20px;
     color: #fff;
     background: transparent;
-    border-radius: 5px;
     height: 32px;
     width: 120px;
     font-size: 16px;
     border: 1px solid #5e5e5e;
+    border-radius: 5px;
 }
 
 .button button {
@@ -225,6 +225,13 @@ button i {
     background: transparent;
     color: #fff;
     border-radius: 5px;
+    background: #000;
+    font-size: 16px;
+}
+
+select option {
+    color: #000;
+    background: #fff;
 }
 
 /** top 10 movies **/
