--- a/Netflix.css
+++ b/Netflix.css
@@ -239,14 +239,21 @@ select option {
 .image-wrap {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 15px;
     margin-top: 25px;
     margin-bottom: 70px;
+    max-width: 1200px;
+    overflow: hidden;
+    overflow-x: scroll;
+}
+
+.image-wrap::-webkit-scrollbar {
+    display: none;
 }
 
 .image-wrap .images-box {
-    height: 252px;
-    width: 180px;
+    min-height: 252px;
+    min-width: 180px;
     border-radius: 8px;
     overflow: hidden;
     display: flex;
