--- a/Netflix.css
+++ b/Netflix.css
@@ -91,6 +91,7 @@ body {
     border: none;
     border-radius: 5px;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .button button:hover {
@@ -263,6 +264,7 @@ select option {
     overflow: hidden;
     display: inline-block;
     padding: 8px 22px;
+    cursor: pointer;
     transition: all 0.3s ease;
 }
 
@@ -341,6 +343,14 @@ select option {
     flex-direction: column;
     gap: 10px;
     margin-bottom: 80px;
+    cursor: pointer;
+}
+
+.question-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    height: auto;
 }
 
 .question {
@@ -367,6 +377,28 @@ select option {
 .question i {
     font-size: 30px;
     color: #ffffff;
+}
+
+.question i.active {
+    transform: rotate(45deg);
+}
+
+.answer {
+    padding: 24px;
+    background-color: #2d2d2d;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.answer span {
+    font-size: 24px;
+}
+
+/* hidden class */
+
+.hidden {
+    display: none;
 }
 
 /** from below questions **/
