--- a/sign-in.css
+++ b/sign-in.css
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
 
@@ -282,7 +282,8 @@ input[type="checkbox"]:hover {
     font-weight: 600;
 }
 
-.bottom-text p a {
+.bottom-text a {
+    font-size: 13px;
     color: #0071eb;
     font-weight: 500;
 }
@@ -389,7 +390,8 @@ select option {
         margin: 30px 0;
     }
 
-    .contact {
+    .contact,
+    .contact p {
         margin: 0;
     }
 }
@@ -405,6 +407,7 @@ select option {
 
     .background-section {
         background-image: none;
+        height: 115vh;
     }
 
     .sign-in-box {
@@ -421,6 +424,15 @@ select option {
 }
 
 @media (max-width: 400px) {
+
+    .sign-in-box {
+        min-width: 280px;
+        padding: 0 20px;
+    }
+
+    .bottom-text p {
+        width: 100%;
+    }
 
     ul {
         margin-bottom: 40px;
