--- a/Netflix.css
+++ b/Netflix.css
@@ -1,22 +1,13 @@
-* {
-    margin: 0;
-    padding: 0;
-    font: 1em sans-serif;
-}
-
 /** background **/
 
 .background-section {
     background-image: url('images/Netflix-background.png');
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
     position: relative;
-    z-index: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    height: 110vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .background-section::before {
@@ -26,17 +17,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 1;
 }
 
 body {
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
+    margin: 0;
+    padding: 0;
     background-color: #000;
-    overflow-x: hidden;
-    overflow-y: auto;
+    font: 1em sans-serif;
 }
 
 /** navbar **/
@@ -47,12 +36,10 @@ body {
     padding: 0 148px;
     justify-content: space-between;
     height: 80px;
-    width: 100%;
-    max-width: 1200px;
+    width: 80%;
     align-items: center;
     z-index: 2;
-    position: absolute;
-    top: 10px;
+    position: relative;
 }
 
 .wrap,
@@ -99,7 +86,7 @@ body {
     background: #e50914;
     border: none;
     border-radius: 5px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 600;
     cursor: pointer;
 }
@@ -120,6 +107,11 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .center-text .heading1 h1 {
@@ -145,6 +137,7 @@ body {
 .get-started {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     padding: 16px 0 0;
     height: 72px;
     width: 588px;
@@ -162,7 +155,7 @@ body {
     padding: 24px 16px 8px;
     box-sizing: border-box;
     margin-right: 13px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     border: 1px solid #5e5e5e;
     border-radius: 5px;
     font-size: 14px;
@@ -231,6 +224,7 @@ button i {
     font-size: 24px;
     color: #fff;
     margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 /** select **/
@@ -338,6 +332,8 @@ select option {
 .heading4 h2 {
     font-size: 24px;
     color: #fff;
+    margin-bottom: 20px;
+    font-weight: 600;
 }
 
 /** boxes **/
@@ -363,7 +359,8 @@ select option {
 .text-wrap h3 {
     font-size: 23px;
     color: #fff;
-    margin: 16px 0 0 0;
+    margin: 10px 0 0;
+    font-weight: 600;
 }
 
 .text-wrap p {
@@ -378,6 +375,7 @@ select option {
     font-size: 22px;
     color: #ffffff;
     margin: 0 0 20px 0;
+    font-weight: 600;
 }
 
 .question-box {
@@ -500,19 +498,14 @@ footer {
 
 ul {
     padding: 0px;
-}
-
-ul .row1,
-ul .row2,
-ul .row3,
-ul .row4 {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 ul li {
     list-style: none;
-    width: 280px;
+    width: 300px;
     height: 21px;
     margin: 12px 0 0;
 }
@@ -533,3 +526,160 @@ ul a {
 }
 
 /** responsiveness **/
+
+@media (max-width: 1250px) {
+
+    .navbar {
+        padding: 0 80px;
+        width: 88%;
+    }
+
+    /* home section */
+
+    .wrap {
+        margin: 0;
+    }
+
+    .center-text {
+        margin-top: 40px;
+    }
+
+    .center-text .heading1 h1 {
+        font-size: 40px;
+    }
+
+    .center-text .plan p {
+        font-size: 16px;
+    }
+
+    .center-text .heading2 h3 {
+        font-weight: normal;
+        width: 500px;
+        text-align: center;
+        line-height: 1.3;
+    }
+
+    .get-started {
+        width: 432px;
+    }
+
+    .input-box input {
+        height: 56px;
+        width: 300px;
+    }
+
+    .button2 button {
+        font-size: 1.25rem;
+        width: 180px;
+    }
+
+    button i {
+        font-size: 18px;
+    }
+
+    /* content */
+
+    .content {
+        padding: 0 80px;
+    }
+
+    /* top - 10 movies */
+
+    .image-wrap {
+        gap: 10px;
+        max-width: none;
+    }
+
+    .image-wrap .images-box {
+        min-height: 196px;
+        min-width: 140px;
+        padding: 6px 22px;
+    }
+
+    .number {
+        font-size: 70px;
+    }
+
+    .scroll-icon {
+        margin-top: 80px;
+    }
+}
+
+@media (max-width: 960px) {
+
+    .navbar {
+        padding: 0 32px;
+        width: 93%;
+    }
+
+    .logo {
+        height: 24px;
+        width: 89px;
+    }
+
+    /* home section */
+
+    .background-section {
+        height: 95vh;
+    }
+
+    .center-text .heading1 h1 {
+        font-size: 32px;
+    }
+
+    .input-box input {
+        width: 250px;
+    }
+}
+
+@media (max-width: 600px) {
+
+    /* home section */
+
+    .center-text .heading1 h1,
+    .center-text .heading2 h3 {
+        width: 535px;
+        font-weight: 600;
+    }
+
+    .get-started {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 20px;
+    }
+
+    .input-box input {
+        height: 48px;
+        width: 535px;
+    }
+
+    .button2 button {
+        width: 160px;
+    }
+}
+
+@media (max-width: 580px) {
+
+    /* navbar */
+
+    .navbar {
+        padding: 0 24px;
+        width: 90%;
+    }
+
+    .select select {
+        width: 80px;
+    }
+
+    .center-text,
+    .center-text .heading1 h1,
+    .center-text .heading2 h3,
+    .input-box,
+    .input-box input {
+        width: 90%;
+    }
+
+    .get-started {
+        width: 100%;
+    }
+}
